# collective_perception

./: .gitignore  .gitmodules  LICENSE  README.md  install.sh
CollectivePerceptionCpp/argos/: kheperaiv_1_empty.argos
CollectivePerceptionCpp/buzz/: body.bzz  kheperaiv_observation_test.bzz  observation_test.bzz
apptainer/def/: argos_buzz_base.def  argos_buzz_no_qt_base.def  linux_utils.def  multi_agent_sim_dynamic.def  multi_agent_sim_dynamic_no_qt.def  multi_agent_sim_full_no_qt.def  multi_agent_sim_static.def  protobuf_layer.def  protobuf_no_qt_layer.def
collective_perception_cpp/: CMakeLists.txt
collective_perception_cpp/argos/: kheperaiv_1_empty.argos  kheperaiv_1_tiled.argos  kheperaiv_5_tiled.argos
collective_perception_cpp/buzz/: CMakeLists.txt  body.bzz
collective_perception_cpp/include/collective_perception_cpp/: arena.hpp  brain.hpp  collective_perception_loop_functions.hpp  data_common.hpp  simulation_agent_data_set.hpp  simulation_data_set.hpp  simulation_set.hpp  simulation_stats_set.hpp
collective_perception_cpp/proto/: CMakeLists.txt  simulation_data_set.proto  simulation_set.proto  util.proto  visualization_data.proto
collective_perception_cpp/src/: CMakeLists.txt  arena.cpp  brain.cpp  collective_perception_loop_functions.cpp  protobuf_info.cpp  run_dynamic_simulations.cpp  simulation_agent_data_set.cpp  simulation_data_set.cpp  simulation_stats_set.cpp
collective_perception_dynamic/: CMakeLists.txt
collective_perception_dynamic/argos/: benchmarking.argos  kheperaiv_1_tiled.argos  kheperaiv_5_tiled.argos  kheperaiv_5_tiled_vicon.argos
collective_perception_dynamic/buzz/: CMakeLists.txt  body.bzz  body_common.bzz  body_crosscombe_2017.bzz  body_ebert_2020.bzz  body_valentini_2016.bzz
collective_perception_dynamic/include/collective_perception_cpp/: arena.hpp  benchmark_algorithm.hpp  benchmark_crosscombe_2017.hpp  benchmark_ebert_2020.hpp  benchmark_valentini_2016.hpp  benchmarking_loop_functions.hpp  brain.hpp  collective_perception_loop_functions.hpp  custom_beta_cdf_gsl.hpp  dac_plugin.hpp  data_common.hpp  robot_disability.hpp  simulation_set.hpp  util.hpp
collective_perception_dynamic/proto/: CMakeLists.txt  simulation_set.proto  util.proto
collective_perception_dynamic/src/: CMakeLists.txt  arena.cpp  benchmark_crosscombe_2017.cpp  benchmark_ebert_2020.cpp  benchmark_valentini_2016.cpp  benchmarking_loop_functions.cpp  brain.cpp  collective_perception_loop_functions.cpp  compute_wall_positions.cpp  custom_beta_cdf_gsl.cpp  dac_plugin.cpp  debug_simulation_agent_data_set_proto.cpp  protobuf_info.cpp  run_dynamic_simulations.cpp  simulation_agent_data_set.cpp
collective_perception_dynamic/tests/: CMakeLists.txt  test_arena.cpp  test_brain.cpp  test_custom_beta_cdf_gsl.cpp  test_header.hpp
collective_perception_static/: conftest.py  multi_agent_sim_static.py  requirements.txt  setup.py
collective_perception_static/collective_perception_py/: horizontal_color_bar_temp.py  sim_modules.py  viz_modules.py  viz_modules_benchmark.py
collective_perception_static/pb2/: simulation_set_pb2.py  util_pb2.py
collective_perception_static/scripts/: combine_vd_static.py  convert_exp_data_to_viz_data_group.py  convert_sim_stats_set_to_viz_data_group.py  export_decision_data.py  extract_local_values_to_viz_data.py  extract_local_values_to_viz_data_group.py  extract_vd_from_vdg.py  multi_agent_sim_static.py  serial_data_info.py  single_agent_sim.py  visualize_benchmark_performance_ratio.py  visualize_multi_agent_data_benchmark.py  visualize_multi_agent_data_dynamic.py  visualize_multi_agent_data_static.py
collective_perception_static/tests/: test_sim_modules.py
docs/: benchmark_algo_explained.md  benchmark_crosscombe_2017_description.md  dac_plugin_explained.md  parameter_file_setup.md  scripts_explained.md
scripts/bash/: execute_multi_agent_sim.sh  hpc_execute_multi_agent_sim.sh  hpc_execute_multi_agent_sim_dynamic.sh  hpc_execute_multi_agent_sim_ebert_2020.sh  hpc_execute_multi_agent_sim_static.sh  setup_python_venv.sh
scripts/examples/data/: crosscombe_2017_data.json  ebert_2020_data.json  valentini_2016_data.json
scripts/examples/param/: param_multi_agent_sim.yaml  param_multi_agent_sim_benchmarking.argos  param_multi_agent_sim_benchmarking_crosscombe_2017.argos  param_multi_agent_sim_benchmarking_ebert_2020.argos  param_multi_agent_sim_benchmarking_valentini_2016.argos  param_multi_agent_sim_dynamic.argos  param_multi_agent_sim_static.yaml  param_plot_heat_surf.m  param_plot_mean_rel_err.m  param_simple_single_agent_no_motion.m  param_single_agent_sim.yaml
scripts/matlab/: import_heatmap_data.m  import_sim_fill_ratios.m  param_plot_heat_surf.m  param_simple_single_agent_no_motion.m  plot_heat_surf.m  plot_mean_rel_err.m  simple_multi_agent_no_motion.m  simple_multi_agent_no_motion_self_calib.m  simple_single_agent_no_motion.asv  simple_single_agent_no_motion.m
scripts/python/: convert_exp_data_to_viz_data_group.py  convert_sim_stats_set_to_viz_data_group.py  multi_agent_sim.py  multi_agent_sim_static.py  requirements.txt  serial_data_info.py  sim_modules.py  simulation_set_pb2.py  single_agent_sim.py  util_pb2.py  visualize_multi_agent_data.py  visualize_multi_agent_data_dynamic.py  visualize_multi_agent_data_static.py  viz_modules.py
scripts/slurm/: sbatch_convert_exp_data.sh  sbatch_convert_sim_stats_set.sh  sbatch_multi_agent_sim_dynamic.sh  sbatch_multi_agent_sim_static.sh
